fdo#78402: Write test for this.

Also discovered that when the "precision as shown" option is set, the validity
list would only show the first item from the list.  Turn that option on in the
test.

Change-Id: I9aaeeb3358709d965f51e406668c72cb94541cdb