sc/source/core/data/document.cxx
@@ -4489,6 +4489,15 @@ const ScPatternAttr* ScDocument::GetMostUsedPattern( SCCOL nCol, SCROW nStartRow
     return NULL;
 }
 
+const ScValidationDataList* ScDocument::GetValidationList() const
+{
+    return pValidationList;
+}
+
+ScValidationDataList* ScDocument::GetValidationList()
+{
+    return pValidationList;
+}
 
 void ScDocument::ApplyAttr( SCCOL nCol, SCROW nRow, SCTAB nTab, const SfxPoolItem& rAttr )
 {
